syntax = "proto3";

package thrl6p;

option go_package = "api/v1";

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

service PatchService {
  rpc CreatePatch (CreatePatchRequest) returns (Patch) {
    option (google.api.http) = {
      post: "/api/patch",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description: "Uploads a new patch."
    };
  }

  rpc GetPatch (GetPatchRequest) returns (Patch) {
    option (google.api.http) = {
      get: "/api/patch/{id}"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description: "Gets a patch with associated metadata."
    };
  }

}

message CreatePatchRequest {
  string name = 1;
  string description = 2;
  string patch = 3;
}

message Patch {
  string id = 1;
  string name = 2;
  string description = 3;
  string patch = 4;
  string permalink = 5;
}

message GetPatchRequest {
  string id = 1;
}